--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "echo 'No build step required for Node.js app'",
     "setup": "node Backend/setup-db.js",
     "test": "echo 'No tests specified'",
-    "heroku-postbuild": "echo 'Post-build completed'"
+    "heroku-postbuild": "echo 'Post-build completed'",
+    "vercel-build": "echo 'Vercel build completed'"
   },
   "keywords": [
     "electrical",
@@ -38,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.5",
+    "pg": "^8.11.3",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7"
   },
