--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "type": "commonjs",
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   },
+  "packageManager": "npm@8.0.0",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
