--- a/Backend/package.json
+++ b/Backend/package.json
@@ -32,6 +32,6 @@
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.5",
     "socket.io": "^4.8.1",
-    "sqlite3": "^5.1.7"
+    "better-sqlite3": "^9.4.3"
   }
 }
