Aggressively disable yarn: Remove packageManager conflicts and force npm usage

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,3 +4,6 @@ enableImmutableInstalls: false
 enableInlineBuilds: false
 enableScripts: false
 enableStrictSsl: false
+# Force version that doesn't exist
+yarnPath: "nonexistent"
+version: "0.0.0"
