--- a/.yarnrc
+++ b/.yarnrc
@@ -1,2 +1,5 @@
-# Disable yarn and force npm usage
+# Completely disable yarn
 disable-immutable-installs true
+version 0.0.0
+# Force yarn to fail
+yarn-path "nonexistent"
