Fix yarn-breaking configuration: Add invalid settings to force yarn to fail completely

--- a/.yarnrc
+++ b/.yarnrc
@@ -1,5 +1,6 @@
-# Completely disable yarn
+# This will cause yarn to fail
+version "invalid-version"
+yarn-path "nonexistent-path"
 disable-immutable-installs true
-version 0.0.0
-# Force yarn to fail
-yarn-path "nonexistent"
+# Invalid configuration that will break yarn
+invalid-setting "this-will-fail"
