--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,5 +5,7 @@ enableInlineBuilds: false
 enableScripts: false
 enableStrictSsl: false
 # Force version that doesn't exist
-yarnPath: "nonexistent"
-version: "0.0.0"
+yarnPath: "nonexistent-path"
+version: "invalid-version"
+# Invalid settings that will break yarn
+invalidSetting: "this-will-fail"
