Ultimate yarn-breaking configuration: Multiple invalid paths and forced npm usage

--- a/.yarnrc
+++ b/.yarnrc
@@ -1,6 +1,11 @@
-# This will cause yarn to fail
+# This will cause yarn to crash completely
 version "invalid-version"
 yarn-path "nonexistent-path"
 disable-immutable-installs true
 # Invalid configuration that will break yarn
 invalid-setting "this-will-fail"
+# Force yarn to fail
+yarn-path "/dev/null"
+# Multiple invalid paths to ensure failure
+yarn-path "/tmp/nonexistent"
+yarn-path "/opt/render/project/src/break-yarn"
