Switch to yarn-cooperative approach: Make yarn use npm instead of breaking it completely

--- a/.yarnrc
+++ b/.yarnrc
@@ -1,11 +1,3 @@
-# This will cause yarn to crash completely
-version "invalid-version"
-yarn-path "nonexistent-path"
+# Force yarn to use npm
+package-manager "npm@8.0.0"
 disable-immutable-installs true
-# Invalid configuration that will break yarn
-invalid-setting "this-will-fail"
-# Force yarn to fail
-yarn-path "/dev/null"
-# Multiple invalid paths to ensure failure
-yarn-path "/tmp/nonexistent"
-yarn-path "/opt/render/project/src/break-yarn"
