--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "postinstall": "echo 'Forcing npm usage'"
   },
   "packageManager": "npm@8.0.0",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0",
+    "yarn": ">=0.0.0"
+  }
   "workspaces": [
     "Backend"
   ]
