--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "setup": "node -e \"require('./config/database').initializeDatabase()\""
+    "setup": "node -e \"require('./config/db-sqlite').initializeTables()\""
   },
   "keywords": [],
   "author": "",
@@ -32,6 +32,6 @@
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.5",
     "socket.io": "^4.8.1",
-    "better-sqlite3": "^9.4.3"
+    "sqlite3": "^5.1.7"
   }
 }
