--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,9 @@ services:
     name: electrical-3-y99h
     env: node
     buildCommand: |
-      echo "Working with yarn but forcing npm..."
-      yarn config set package-manager npm@8.0.0
-      yarn install --ignore-engines
-      echo "Build completed with yarn using npm"
+      echo "Installing dependencies with npm..."
+      npm install
+      echo "Build completed successfully"
     startCommand: npm start
     envVars:
       - key: NODE_ENV
