--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,15 @@ services:
     name: electrical-3-y99h
     env: node
     buildCommand: |
+      echo "Forcing npm usage and preventing yarn..."
+      rm -f yarn.lock
+      rm -rf .yarn
+      rm -f .yarnrc
+      rm -f .yarnrc.yml
+      echo "Clearing npm cache..."
+      npm cache clean --force
       echo "Installing dependencies with npm..."
-      npm install
+      npm ci --only=production
       echo "Build completed successfully"
     startCommand: npm start
     envVars:
@@ -20,6 +27,12 @@ services:
         value: ./electrical_management.db
       - key: FRONTEND_URL
         value: https://super-paprenjak-d9ab2f.netlify.app
+      - key: NPM_CONFIG_PACKAGE_MANAGER
+        value: npm
+      - key: YARN_DISABLE
+        value: "true"
+      - key: NPM_CONFIG_ENGINE_STRICT
+        value: "true"
     healthCheckPath: /health
     autoDeploy: true
     branch: main
