--- a/package.json
+++ b/package.json
@@ -1,19 +1,44 @@
 {
   "name": "electrical-management-system",
   "version": "1.0.0",
-  "description": "Electrical Management System with Backend and Frontend",
-  "private": true,
+  "description": "Electrical Management System - Full Stack Application",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required for this project'",
+    "test": "echo 'No tests specified'",
+    "setup": "node -e \"console.log('Setting up database...')\""
+  },
+  "keywords": [
+    "electrical",
+    "management",
+    "inventory",
+    "reports",
+    "toolbox",
+    "tasks"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "engines": {
     "node": ">=16.0.0",
     "npm": ">=8.0.0"
   },
-  "scripts": {
-    "start": "cd Backend && npm start",
-    "build": "echo 'Build completed successfully'",
-    "postinstall": "echo 'Build completed successfully'"
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "colors": "^1.4.0",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
+    "dotenv": "17.2.1",
+    "express": "^5.1.0",
+    "express-session": "^1.17.3",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.5",
+    "sqlite3": "^5.1.7"
   },
-  "packageManager": "npm@8.0.0",
-  "workspaces": [
-    "Backend"
-  ]
+  "devDependencies": {
+    "nodemon": "^3.0.0"
+  }
 }
