--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "setup": "node -e \"require('./config/db-sqlite').initializeTables()\""
+    "setup": "node -e \"require('./config/db-sqlite').initializeTables()\"",
+    "setup-postgresql": "node -e \"require('./config/database-postgresql').initializeDatabase()\"",
+    "migrate": "node migrate-to-postgresql.js",
+    "db:switch": "node -e \"console.log('Current DB:', require('./config/database-switcher').pool ? 'PostgreSQL' : 'SQLite')\"",
+    "test-migration": "node test-migration-setup.js"
   },
   "keywords": [],
   "author": "",
@@ -17,21 +21,24 @@
     "node": ">=16.0.0",
     "npm": ">=8.0.0"
   },
-
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "colors": "^1.4.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "dotenv": "17.2.1",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.2",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.5",
+    "pg": "^8.11.3",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
