--- a/render.yaml
+++ b/render.yaml
@@ -26,7 +26,7 @@ services:
       - key: DB_PATH
         value: ./electrical_management.db
       - key: FRONTEND_URL
-        value: https://super-paprenjak-d9ab2f.netlify.app
+        value: https://electrical-3.netlify.app
       - key: NPM_CONFIG_PACKAGE_MANAGER
         value: npm
       - key: YARN_DISABLE
