Aggressive Express fix: Force Express 4.18.2 install + minimal server fallback

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "start:minimal": "node server-minimal.js",
     "start:simple": "node server-simple.js",
     "start:debug": "node start-debug.js",
     "dev": "nodemon server.js",
