Fix SQLite backend and resolve path-to-regexp error - Fixed database switcher to use SQLite by default - Resolved path-to-regexp error in 404 handler - Added socket.io dependency - Updated database configuration for SQLite - Cleaned up deployment files and configurations

--- a/Backend/config.env
+++ b/Backend/config.env
@@ -7,18 +7,18 @@ FRONTEND_URL=http://127.0.0.1:5500
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 
 # Database Configuration
-# Choose database type: 'sqlite' or 'postgresql'
+# Choose database type: 'sqlite' (recommended) or 'postgresql'
 DB_TYPE=sqlite
 
 # SQLite Configuration (for local development)
 DB_PATH=./electrical_management.db
 
-# PostgreSQL Configuration (for Railway production)
-DB_USER=postgres
-DB_HOST=localhost
-DB_NAME=electrical_management
-DB_PASSWORD=password
-DB_PORT=5432
+# PostgreSQL Configuration (commented out - using SQLite instead)
+# DB_USER=postgres
+# DB_HOST=localhost
+# DB_NAME=electrical_management
+# DB_PASSWORD=password
+# DB_PORT=5432
 
 # Email Configuration (for password reset)
 SMTP_HOST=smtp.gmail.com
