Update production server and prepare for Render deployment - Fixed production server to use app-robust.js with SQLite - All routes and middleware properly loaded - SQLite database working correctly - Ready for Render deployment with SQLite support

--- a/env.example
+++ b/env.example
@@ -20,10 +20,10 @@ SESSION_SECRET=your-super-secret-key-change-in-production
 JWT_SECRET=your-jwt-secret-key-change-in-production
 
 # CORS Configuration
-ALLOWED_ORIGINS=https://your-app.herokuapp.com,https://your-app.vercel.app
+ALLOWED_ORIGINS=https://electrical-management-system.onrender.com
 
 # Frontend URL
-FRONTEND_URL=https://your-app.herokuapp.com
+FRONTEND_URL=https://electrical-management-system.onrender.com
 
 # Email Configuration (for password reset, notifications)
 EMAIL_SERVICE=gmail
