--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Electrical Management System - Full Stack Application",
   "main": "Backend/server-production.js",
   "scripts": {
-    "start": "node start.js",
+    "start": "node Backend/server-production.js",
     "dev": "nodemon server.js",
     "build": "echo 'No build step required for this project'",
     "test": "echo 'No tests specified'",
