--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Electrical Management System - Full Stack Application",
   "main": "Backend/server-production.js",
   "scripts": {
-    "start": "node Backend/server-production.js",
+    "start": "node railway-start.js",
     "dev": "nodemon server.js",
     "build": "echo 'No build step required for this project'",
     "test": "echo 'No tests specified'",
@@ -38,6 +38,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.5",
+    "pg": "^8.11.3",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
