Fix Nixpacks PostgreSQL package names

--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["postgresql", "libpq", "openssl"]
+nixPkgs = ["postgresql"]
 
 [phases.install]
 cmds = ["npm ci --only=production"]
