Fix package.json to use railway-production.js - Critical Railway deployment fix

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,15 +2,15 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server-production.js",
+  "main": "railway-production.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server-production.js",
-    "start:production": "node server-production.js",
+    "start": "node railway-production.js",
+    "start:production": "node railway-production.js",
     "start:minimal": "node server-minimal.js",
     "start:simple": "node server-simple.js",
     "start:debug": "node start-debug.js",
-    "test:production": "node server-production.js",
+    "test:production": "node railway-production.js",
     "test:deployment": "node test-deployment.js",
     "dev": "nodemon server.js",
     "setup": "node -e \"require('./config/db-sqlite').initializeTables()\"",
