Restore working SQLite deployment - Remove PostgreSQL complexity and restore reliable SQLite server

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,20 +2,18 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "railway-production.js",
+  "main": "server-production.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node railway-production.js",
-    "start:production": "node railway-production.js",
+    "start": "node server-production.js",
+    "start:production": "node server-production.js",
     "start:minimal": "node server-minimal.js",
     "start:simple": "node server-simple.js",
     "start:debug": "node start-debug.js",
-    "test:production": "node railway-production.js",
+    "test:production": "node server-production.js",
     "test:deployment": "node test-deployment.js",
     "dev": "nodemon server.js",
     "setup": "node -e \"require('./config/db-sqlite').initializeTables()\"",
-    "setup-postgresql": "node -e \"require('./config/database-postgresql').initializeDatabase()\"",
-    "setup-railway": "node setup-railway-postgresql.js",
     "migrate": "node migrate-to-postgresql.js",
     "db:switch": "node -e \"console.log('Current DB:', require('./config/database-switcher').pool ? 'PostgreSQL' : 'SQLite')\"",
     "test-migration": "node test-migration-setup.js"
