--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,16 +2,16 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server-production.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server-production.js",
-    "start:production": "node server-production.js",
-    "start:minimal": "node server-minimal.js",
-    "start:simple": "node server-simple.js",
-    "start:debug": "node start-debug.js",
-    "test:production": "node server-production.js",
-    "test:deployment": "node test-deployment.js",
+    "start": "node server.js",
+    "start:production": "node server.js",
+    "start:minimal": "node server.js",
+    "start:simple": "node server.js",
+    "start:debug": "node server.js",
+    "test:production": "node server.js",
+    "test:deployment": "node server.js",
     "dev": "nodemon server.js",
     "setup": "node -e \"require('./config/db-sqlite').initializeTables()\"",
     "migrate": "node migrate-to-postgresql.js",
